--- a/configure.in
+++ b/configure.in
@@ -1044,6 +1044,8 @@ if test "$disable_cli" != "1"; then
   PHP_CLI_TARGET="\$(SAPI_CLI_PATH)"
   PHP_INSTALL_CLI_TARGET="install-cli"
   PHP_ADD_SOURCES(sapi/cli, php_cli.c getopt.c,, cli)
+else
+  with_pear=no
 fi
 
 PHP_SUBST(PHP_CLI_TARGET)
